--- a/database/.gitignore
+++ b/database/.gitignore
@@ -1,1 +1,24 @@
-*.sqlite*
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+.env.backup
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
+/vendor
+/public/upload
+/public/uploads
+/public/video
+.env
+.htaccess
+*.zip
+*.rar
+*.mp4
+*.sql
+*.wpress
+/DB
+/db_file
+composer.lock
