--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,23 @@
 /public/hot
 /public/storage
 /storage/*.key
-/vendor
-.env
 .env.backup
 .phpunit.result.cache
-docker-compose.override.yml
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-/.idea
-/.vscode
+/vendor
+/public/upload
+/public/uploads
+/public/video
+.env
+.htaccess
+*.zip
+*.rar
+*.mp4
+*.sql
+*.wpress
+/DB
+/db_file
+composer.lock
